Simplify Geometry API and add location of sub-setted extents